Fixed evil consent modal showing off screen
This was due to a weird combination of modal animation + the #noAnimate
option being applied poorly.  Now noAnimate still allows modal
animation but disables all others.

--- a/app/styles/base-ui.css
+++ b/app/styles/base-ui.css
@@ -149,7 +149,8 @@ a, a:hover {
     margin-left: 7%;
 }
 
-html#noAnimate body * {
+html#noAnimate .content *,
+html#noAnimate .modal-content * {
     -webkit-transition-property: none !important;
     -webkit-animation: none !important;
     -webkit-transform: none !important;
